[package]
name = "lambda-token-refresher"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.1"
aws-sdk-ssm = "1.9.0"
lambda_runtime = "0.8.3"
serde = "1.0.136"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24.2"
serde_urlencoded = "0.7.1"
